# QuantSuzano

./: .gitignore  CHECKLIST.md  DATA_SOURCES.md  FINAL_FIX_REINSTALL.bat  FINAL_SUMMARY.md  GIT_COMMIT_GUIDE.md  IMPLEMENTATION_SUMMARY.md  INSTALL_AND_TEST.bat  Makefile  PIPELINE_GUIDE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  README_FINAL.md  README_OLD.md  REINSTALL_FIXED.bat  REINSTALL_PACKAGE.bat  RELATORIO_COMPLETO_QUANTSUZANO.md  RUN_COMPLETE_ANALYSIS_FIXED.bat  RUN_ENSEMBLE_STRATEGY.bat  SETUP_GUIDE.md  START_OPTIMIZATION.bat  config.example.json  ensemble_output.txt  pyproject.toml  run_ensemble.py  run_pipeline.py  run_pipeline_safe.py  setup.py  test_ensemble.py
data/manual_uploads/: README.md
data/raw/: climate.csv  credit.csv  iagro.csv  imat.csv  ptax.csv  pulp_usd.csv  selic.csv  suzb.csv  suzb3.csv
data/versions/: ptax_20251025_171924.parquet  selic_20251025_171942.parquet  suzb3_20251025_172146.parquet  versions.json
docs/: README.md
docs/images/: README.md
notebooks/: EDA.ipynb
src/eda/: __init__.py  backtest.py  cli.py  config.py  data_quality.py  exploratory.py  features.py  loaders.py  loaders_benchmarks.py  metrics.py  models.py  plots.py  plots_validation.py  synthetic.py  synthetic_robust.py  utils_split.py
src/eda/automl/: __init__.py  model_comparison.py  tpot_models.py
src/eda/forecasting/: __init__.py  classical.py  plots.py
src/eda/pipeline/: __init__.py  alerting.py  incremental.py  manual_upload.py  monitoring.py  orchestrator.py  scheduler.py  validator.py  versioning.py
src/eda/risk/: __init__.py  drawdowns.py  (+4 more)
(+16 files in other folders)
