[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_backend"

[project]
name = "eda-suzano"
version = "0.1.0"
description = "EDA pipeline for Suzano/Celulose market analysis"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "statsmodels>=0.14.0",
    "yfinance>=0.2.0",
    "typer>=0.9.0",
    "python-bcb>=0.1.6",
    "requests>=2.31.0",
    "pyarrow>=12.0.0",
    "openpyxl>=3.1.0",
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "ruff>=0.0.280",
    "pytest>=7.4.0",
]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

